docs: update HANDOVER.md and CLAUDE.md after the JPro browser port
- HANDOVER.md: session pointer for the next session (Phase C / Dokploy deploy).
- CLAUDE.md: Java 21 baseline (JDK 25 for the JPro web run), add a "Run in the
  browser (JPro)" section, drop the deleted hello-view.fxml reference, note the
  Surefire byte-buddy.experimental flag for JDK 25 tests.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MhT3HoSqzEeQmVk4LBdK15